core/src/snapshots/ark_0_zheng__snapshot_tests__if_else_ast.snap
---
source: core/src/snapshot_tests.rs
expression: ast
---
Statement(
    Block(
        [
            Let {
                name: "x",
                ty: None,
                value: Integer(
                    10,
                ),
            },
            If {
                condition: Call {
                    function_hash: "gt",
                    args: [
                        Variable(
                            "x",
                        ),
                        Integer(
                            5,
                        ),
                    ],
                },
                then_block: [
                    Expression(
                        Call {
                            function_hash: "print",
                            args: [
                                Literal(
                                    "big",
                                ),
                            ],
                        },
                    ),
                ],
                else_block: Some(
                    [
                        Expression(
                            Call {
                                function_hash: "print",
                                args: [
                                    Literal(
                                        "small",
                                    ),
                                ],
                            },
                        ),
                    ],
                ),
            },
        ],
    ),
)
