core/src/snapshots/ark_0_zheng__snapshot_tests__list_ops_bytecode.snap
---
source: core/src/snapshot_tests.rs
expression: opcodes
---
[
    "Push(Integer(1))",
    "Push(Integer(2))",
    "Push(Integer(3))",
    "Push(Integer(4))",
    "Push(Integer(5))",
    "MakeList(5)",
    "Store(\"items\")",
    "Load(\"items\")",
    "Load(\"sys.len\")",
    "Call(1)",
    "Destructure",
    "Store(\"l\")",
    "Store(\"_\")",
    "Load(\"l\")",
    "Print",
    "Push(Unit)",
]
