core/src/snapshots/ark_0_zheng__snapshot_tests__simple_program_json.snap
---
source: core/src/snapshot_tests.rs
expression: ast
---
{
  "Statement": {
    "Block": [
      {
        "Let": {
          "name": "x",
          "ty": null,
          "value": {
            "Integer": 42
          }
        }
      },
      {
        "Expression": {
          "Call": {
            "function_hash": "print",
            "args": [
              {
                "Variable": "x"
              }
            ]
          }
        }
      }
    ]
  }
}
